--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,123 +3,33 @@
   }
   
   /* Basic page layout */
-  
-  header {
-    border-top: solid 10px rgba(13, 76, 82, 0.9);
-    background-color: rgba(13, 76, 82, 0.5);
-    color: var(--textcol);
-    text-align: center;
-    height: 150px;
-  }
-  h1 {
-    padding-top: 20px;
-    font-size: 30pt;
-  }
-  h2 {
-    padding: 10px;
-    font-size: 20pt;
-  }
-  h3 {
-    padding: 10px;
-    font-size: 20pt;
-  }
-  
-  @media only screen and (min-width: 960px) {
-    aside {
-      background-color: rgba(13, 76, 82, 0.2);
-      position: absolute;
-      top: 160px;
-      right: 0px;
-      height: 1000px;
-      width: 25%;
-    }
-  }
-  
-  #photo {
-    position: relative;
-    top: 10%;
-    right: 10%;
-    width: 80px;
-    height: 110px;
-    border: 2px solid var(--col);
-  }
-  
-  nav {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
-  .content{
-    background-color: antiquewhite;
-    width: 75%;
-  }
-  
-  footer {
-    background-color: rgba(13, 76, 82, 0.9);
-    width: 100vp;
-    height: 50px;
-  }
-  
-  /* Content */
-  
-  #photo {
-    display: block;
-    width: auto;
-    height: auto;
-    padding: 20px;
-  }
-  
-  #content-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 200px 200px 200px;
-    grid-template-areas: 
-      "pr1 pr1 pr2"
-      "pr1 pr1 pr2"
-      "pr3 pr3 pr4";
-    padding: 10px;
-  }
-  
-  #content-grid p {
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 70%;
-    margin-left: 10%;
-    color: antiquewhite;
-  }
-  
-  #pr1 {
-    grid-area: pr1;
-    background: url(../images/02-portfolio-1.jpg);
-    background-size: cover;
-  }
-  
-  #pr2 {
-    grid-area: pr2;
-    background: url(../images/02-portfolio-2.jpg);
-    background-size: cover;
-  }
-  
-  #pr3 {
-    grid-area: pr3;
-    background: url(../images/02-portfolio-3.jpg);
-    background-size: cover;
-  }
-  
-  #pr4 {
-    grid-area: pr4;
-    background: url(../images/02-portfolio-4.jpg);
-    background-size: cover;
-  }
-  
-  /* Typography*/
-  
-  
-  nav a {
-    color: var(--textcol);
-    cursor: pointer;
-    text-decoration: none;
-  }
-  
-  
+
+section {
+  margin: 4rem 2rem;
+}
+
+hr {
+  width: 90%;
+  margin-left: 5%;
+}
+
+.self {
+  float: right;
+  padding: 5px;
+  top: 180px;
+  right: 20px;
+  width: 200px;
+  height: 160px;
+  word-wrap: break-word;
+  object-fit: contain;
+}
+
+/* .carousel-inner {
+  height: 500px;
+  object-fit: cover;
+}
+
+.carousel-caption {
+  top: 0;
+  bottom: auto;
+} */
